# GPA-Calculator

./: CMakeLists.txt  README.md
src/: course.cpp  course.h  mainwindow.cpp  mainwindow.h
